[package]
name = "tictactoe"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
default = []
debug = ["bevy-inspector-egui", "bevy_egui", "bevy/dynamic_linking"]

[dependencies]
bevy = "0.16.1"
bevy_egui = {version = "0.35.1", optional = true}
bevy-inspector-egui = {version = "0.32.0", optional = true }
